root_generate_dictionary(
	StarClassLibrary_Cint
	StPhysicalHelix.hh
	StLorentzVector.hh
	StMatrix.hh
	StThreeVector.hh
	StHelix.hh
	StHelixHelper.h
	BetheBloch.h
	StThreeVectorF.hh
	StThreeVectorD.hh
	StLorentzVectorF.hh
	StLorentzVectorD.hh
	StMatrixF.hh
	StMatrixD.hh
	StPhysicalHelixD.hh
	StParticleTable.hh
	StParticleDefinition.hh
	LINKDEF StarClassLibraryLinkDef.hh
   OPTIONS -D__ROOT__
)

add_library (
	StarClassLibrary
	SHARED
	BetheBloch.cxx
	DRand48Engine.cc
	JamesRandom.cc
	RandBreitWigner.cc
	RandEngine.cc
	RandExponential.cc
	RandFlat.cc
	RandGauss.cc
	RandPoisson.cc
	Random.cc
	RandomEngine.cc
	RanecuEngine.cc
	RanluxEngine.cc
	StAlpha.cc
	StAntiAlpha.cc
	StAntiBMesonZero.cc
	StAntiBsMesonZero.cc
	StAntiDMesonZero.cc
	StAntiDStarMesonZero.cc
	StAntiDeuteron.cc
	StAntiHelium3.cc
	StAntiHyperTriton.cc
	StAntiKaonZero.cc
	StAntiLambda.cc
	StAntiLambda1520.cc
	StAntiLambdacPlus.cc
	StAntiNeutrinoE.cc
	StAntiNeutrinoMu.cc
	StAntiNeutrinoTau.cc
	StAntiNeutron.cc
	StAntiOmegaMinus.cc
	StAntiOmegacZero.cc
	StAntiProton.cc
	StAntiSigmaMinus.cc
	StAntiSigmaMinus1385.cc
	StAntiSigmaPlus.cc
	StAntiSigmaPlus1385.cc
	StAntiSigmaZero.cc
	StAntiSigmacPlus.cc
	StAntiSigmacPlusPlus.cc
	StAntiSigmacZero.cc
	StAntiTriton.cc
	StAntiXiMinus.cc
	StAntiXiZero.cc
	StAntiXicPlus.cc
	StAntiXicZero.cc
	StBMesonMinus.cc
	StBMesonPlus.cc
	StBMesonZero.cc
	StBsMesonZero.cc
	StCerenkov.cc
	StDMesonMinus.cc
	StDMesonPlus.cc
	StDMesonZero.cc
	StDStarMesonMinus.cc
	StDStarMesonPlus.cc
	StDStarMesonZero.cc
	StDalitz.cc
	StDeuteron.cc
	StDsMesonMinus.cc
	StDsMesonPlus.cc
	StElectron.cc
	StEta.cc
	StEtaPrime.cc
	StFastCircleFitter.cc
	StGamma.cc
	StGeantino.cc
	StHDibaryon.cc
	StHe3.cc
	StHelium3.cc
	StHelix.cc
	StHelixHelper.cxx
	StHyperTriton.cc
	StJPsi.cc
	StKaonMinus.cc
	StKaonPlus.cc
	StKaonZero.cc
	StKaonZeroLong.cc
	StKaonZeroMode0809.cc
	StKaonZeroShort.cc
	StLambda.cc
	StLambda1520.cc
	StLambdacPlus.cc
	StLorentzVector.cc
	StMCTruth.cxx
	StMath.cc
	StMatrix.cc
	StMemoryInfo.cc
	StMemoryPool.cc
	StMultiArray.cxx
	StMuonMinus.cc
	StMuonPlus.cc
	StNeutrinoE.cc
	StNeutrinoMu.cc
	StNeutrinoTau.cc
	StNeutron.cc
	StOmegaMeson.cc
	StOmegaMinus.cc
	StOmegacZero.cc
	StOpticalPhoton.cc
	StParticleDefinition.cc
	StParticleTable.cc
	StPhi.cc
	StPhysicalHelix.cc
	StPionMinus.cc
	StPionPlus.cc
	StPionZero.cc
	StPositron.cc
	StProton.cc
	StPsi2s.cc
	StRandom.cc
	StRhoMinus.cc
	StRhoPlus.cc
	StRhoZero.cc
	StSigmaMinus.cc
	StSigmaMinus1385.cc
	StSigmaPlus.cc
	StSigmaPlus1385.cc
	StSigmaZero.cc
	StSigmacPlus.cc
	StSigmacPlusPlus.cc
	StSigmacZero.cc
	StTauMinus.cc
	StTauPlus.cc
	StThreeVector.cc
	StTimer.cc
	StTriton.cc
	StUpsilon.cc
	StUpsilon2S.cc
	StUpsilon3S.cc
	StWMinusBoson.cc
	StWPlusBoson.cc
	StXiMinus.cc
	StXiZero.cc
	StXiZero1530.cc
	StXicPlus.cc
	StXicZero.cc
	StZZeroBoson.cc
	probChiSquared.cc
	StarClassLibrary_Cint.cxx
)

install(TARGETS StarClassLibrary DESTINATION ".$ENV{STAR_HOST_SYS}/lib")
